--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "foundry-brew-design-measure",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Browser-based brew design and measurement tool for Foundry Coffee House",
   "scripts": {
-    "windows-open": "cmd /c start \"\" \"dist/brew-calc.html\"",
+    "windows-open": "cmd /c start \"\" \"dist/index.html\"",
     "build": "run-s build:*",
     "build:esbuild": "esbuild src/brew-calc.ts --bundle --format=esm --target=es2020 --outfile=bundle/brew-calc.js",
     "build:copy": "cpy \"src/**/*.{html,css}\" bundle --parents",
-    "build:inline": "mkdirp dist && inline-source bundle/brew-calc.html --root bundle --compress false > dist/brew-calc.html",
+    "build:copy-pwa": "cpy \"pwa-files/**/*.*\" dist --parents",
+    "build:inline": "mkdirp dist && inline-source bundle/brew-calc.html --root bundle --compress false > dist/index.html",
     "watch": "run-p watch:*",
     "watch:esbuild": "esbuild src/brew-calc.ts --bundle --format=esm --target=es2020 --outfile=bundle/brew-calc.js --watch",
     "watch:copy": "chokidar \"src/**/*.{html,css}\" -c \"npm run build:copy\" --initial --debounce 200 --await-write-finish 200",
+    "watch:copy-pwa": "chokidar \"pwa-files/**/*.*\" -c \"npm run build:copy-pwa\" --initial --debounce 200 --await-write-finish 200",
     "watch:inline": "chokidar \"bundle/**/*\" -c \"npm run build:inline\" --debounce 200",
-    "lint": "eslint \"src/**/*.{ts,tsx,js}\"",
-    "typecheck": "tsc --noEmit"
+    "deploy": "gh-pages -d dist"
   },
   "author": "Mark Schwartzkopf",
   "license": "AGPL-3.0-or-later",
@@ -25,6 +26,7 @@
     "esbuild": "^0.25.9",
     "eslint": "^9.34.0",
     "eslint-plugin-promise": "^7.2.1",
+    "gh-pages": "^6.3.0",
     "inline-source": "^8.0.3",
     "inline-source-cli": "^2.0.0",
     "mkdirp": "^3.0.1",
